Fixed dark mode bug in FF

--- a/assets/scss/style.sass
+++ b/assets/scss/style.sass
@@ -7,6 +7,13 @@
   line-height: 1.625
   font-weight: 700
 
+input
+  color: var(--clr-neutral-400)
+  font-family: var(--ff-primary)
+  font-size: var(--fs-400)
+  line-height: 1.625
+  font-weight: 700
+
 html
   // scroll-padding-top: calc(var(--headline-size) + 4em)
   scroll-behavior: smooth
